# yolov8_seg

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: config.yaml
include/yolov8_seg/: yolov8_seg.h  yolov8_seg_node.h
launch/: run.launch  usb_cam.launch
msg/: bbox.msg  bboxes.msg
src/: yolov8_seg.cpp  yolov8_seg_node.cpp
